# URL-Shortener

./: .env.example  .gitignore  Dockerfile  Makefile  Makefile.k6  README.md  docker-compose.yml  go.mod  go.sum  sqlc.yaml
cmd/api/: main.go
cmd/api_hightps/: main.go  storage.go
cmd/click_consumer/: main.go
cmd/outbox_worker/: main.go
internal/config/: config.go  env.go  env_test.go
internal/constants/: codes.go  errors.go  messages.go  success.go
internal/events/: click_recorded.go
internal/infrastructure/db/: mongo.go  postgres.go
internal/infrastructure/logger/: logger.go
internal/infrastructure/telemetry/: tracer.go
internal/infrastructure/validation/: validator.go
internal/processing/links/: ports.go  service.go  service_test.go  slug.go  slug_test.go  types.go
internal/storage/mongo/: buffered_stats_repository.go  links_repository.go  outbox_repository.go  stats_repository.go
internal/storage/postgres/: click_event_processor.go  links_repository.go  outbox_repository.go  stats_repository.go
internal/storage/redis/: client.go  fixed_window_limiter.go
internal/transport/http/: health_handler.go  (+2 more)
kong/: kong.yml
monitoring/prometheus/: prometheus.yml
nginx/: nginx.conf
pkg/httpclient/: circuit_breaker.go  client.go
pkg/httputils/: httputils.go
scripts/: worktree.sh
tests/k6/: README.md  api_gateway_crud.js  api_gateway_tps.js
web/: index.html  package-lock.json  package.json  vite.config.js
web/electron/: main.cjs  preload.cjs
web/src/: App.jsx  api.js  styles.css
web/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
(+22 files in other folders)
